tdf#82012 - keep flip settings when compressing image

Format - flip - Horizontal/Vertical setting was lost when compressing
an image.

Change-Id: Id39e7ce9a82174ac2248851107e398979fba56aa